crates/efr-render/src/elements/snapshots/efr_render__elements__tests__emphasis_w80.snap
---
source: crates/efr-render/src/elements/tests.rs
expression: "readable(&render(markdown, &options))"
---
Some \e[3mitalic\e[0m, \e[1mbold\e[0m, \e[1;3mboth\e[0m, \e[9mstruck\e[0m and \e[36minline code\e[0m in one line of prose.
