crates/efr-render/src/elements/snapshots/efr_render__elements__tests__every_role_in_sixteen_colours_w80.snap
---
source: crates/efr-render/src/elements/tests.rs
expression: every_role(&options)
---
\e[1;4;33mAccent heading\e[0m

\e[1;33mSecond heading\e[0m

\e[1mThird heading\e[0m

\e[1;3mFourth heading\e[0m

Prose with \e[36mcode\e[0m, a \e]8;;https://example.com\e\\e[4;34mlink\e]8;;\e\\e[0m and \e[1mbold\e[0m.

\e[2m│ \e[0m\e[3mA quoted line.\e[0m

\e[32m[x]\e[0m done
[ ] open

\e[2m────────────────────────────────────────\e[0m

\e[36m@@ -1 +1 @@\e[0m
\e[1;31m-\e[0m\e[31mold\e[0m
\e[1;32m+\e[0m\e[32mnew\e[0m

\e[2msrc/main.rs\e[0m
\e[35mfn\e[0m \e[34mmain\e[0m() { \e[35mlet\e[0m s \e[35m=\e[0m \e[32m"hi"\e[0m; } \e[32m// note\e[0m

text
\e[2mmuted\e[0m
\e[33maccent\e[0m
\e[1;33mheading\e[0m
\e[4;34mlink\e[0m
\e[36mcode\e[0m
\e[32msuccess\e[0m
\e[1;33mwarning\e[0m
\e[31merror\e[0m
\e[3mquote\e[0m
\e[32mdiff.add\e[0m
\e[31mdiff.remove\e[0m
\e[36mdiff.hunk\e[0m
\e[2mshell: cargo test\e[0m
