crates/efr-render/src/elements/snapshots/efr_render__elements__tests__every_role_with_overrides.snap
---
source: crates/efr-render/src/elements/tests.rs
expression: every_role(&options)
---
\e[1;4;35mAccent heading\e[0m

\e[1;35mSecond heading\e[0m

\e[1mThird heading\e[0m

\e[1;3mFourth heading\e[0m

Prose with \e[33mcode\e[0m, a \e]8;;https://example.com\e\\e[4;94mlink\e]8;;\e\\e[0m and \e[1mbold\e[0m.

\e[90m│ \e[0m\e[3;37mA quoted line.\e[0m

\e[32m[x]\e[0m done
[ ] open

\e[90m────────────────────────────────────────\e[0m

\e[36m@@ -1 +1 @@\e[0m
\e[1;31m-\e[0m\e[31mold\e[0m
\e[1;92m+\e[0m\e[92mnew\e[0m

\e[90msrc/main.rs\e[0m
\e[35mfn\e[0m \e[34mmain\e[0m() { \e[35mlet\e[0m s \e[35m=\e[0m \e[32m"hi"\e[0m; } \e[32m// note\e[0m

text
\e[90mmuted\e[0m
\e[35maccent\e[0m
\e[1;35mheading\e[0m
\e[4;94mlink\e[0m
\e[33mcode\e[0m
\e[32msuccess\e[0m
\e[1;33mwarning\e[0m
\e[31merror\e[0m
\e[3;37mquote\e[0m
\e[92mdiff.add\e[0m
\e[31mdiff.remove\e[0m
\e[36mdiff.hunk\e[0m
\e[90mshell: cargo test\e[0m
