crates/efr-render/src/elements/snapshots/efr_render__elements__tests__everything_without_colour_w40.snap
---
source: crates/efr-render/src/elements/tests.rs
expression: "readable(&render(&document, &options))"
---
\e[1;4mHeading one\e[0m

\e[1mHeading two\e[0m

\e[1mHeading three\e[0m

\e[1;4mSetext heading\e[0m

Some \e[3mitalic\e[0m, \e[1mbold\e[0m, \e[1;3mboth\e[0m, \e[9mstruck\e[0m and `inline code` in one line of prose.

A first paragraph on one line.
Its second line stays a line of its own.

A second paragraph long enough to pass forty columns, which the terminal wraps, not the renderer.

line one of a long paragraph
line two
line three
line four
line five
line six

• one
• two, with text long enough to wrap
  inside the item at forty columns
  ◦ nested
    ▪ deeper
• three

1. first
2. second
3. third
   with a second paragraph in the third
   item
4. fourth

[ ] to do
[x] done
[ ] a task whose text is long enough to
    wrap at forty columns

\e[2m│ \e[0m\e[3mA quote long enough to wrap when the\e[0m
\e[2m│ \e[0m\e[3mterminal is forty columns wide.\e[0m
\e[2m│\e[0m
\e[2m│ \e[0m\e[3mIts second paragraph.\e[0m
\e[2m│\e[0m
\e[2m│ \e[0m• \e[3ma list inside the quote\e[0m

\e[2mrust\e[0m
fn main() {
    let greeting = "hello"; // a comment
    println!("{greeting}, from a line that is wider than forty columns");
}

plain text
    after a tab

1. Build it:
   \e[2msh\e[0m
   cargo build --release
2. Done.

\e[1mdiff --git a/src/main.rs b/src/main.rs\e[0m
\e[1mindex 1111111..2222222 100644\e[0m
\e[1m--- a/src/main.rs\e[0m
\e[1m+++ b/src/main.rs\e[0m
@@ -1,3 +1,3 @@ fn main() {
 fn main() {
\e[1m-\e[0m    println!("old");
\e[1m+\e[0m    println!("new");
 }

\e[1mName\e[0m        \e[2m │ \e[0m\e[1mKind\e[0m\e[2m │ \e[0m\e[1mSize\e[0m
\e[2m─────────────┼──────┼─────\e[0m
`efr-render`\e[2m │ \e[0mlib \e[2m │ \e[0m   1
efrd        \e[2m │ \e[0m\e[1mbin\e[0m \e[2m │ \e[0m  22

\e[1mOption:\e[0m width
\e[1mMeaning:\e[0m the number of columns text is laid out in

\e[1mOption:\e[0m theme
\e[1mMeaning:\e[0m the syntax theme of code blocks and diffs

See \e]8;;https://example.com/docs\e\\e[4mthe docs\e]8;;\e\\e[0m, \e]8;;https://example.com\e\\e[4mhttps://example.com\e]8;;\e\\e[0m, \e]8;;https://example.com/bare\e\\e[4mhttps://example.com/bare\e]8;;\e\\e[0m, \e]8;;file:///etc/hosts\e\\e[4mhosts\e]8;;\e\\e[0m, \e]8;;file:///var/log/syslog\e\`/var/log/syslog`\e]8;;\e\ and \e[4ma relative link\e[0m\e[2m (src/lib.rs)\e[0m.

\e]8;;https://example.com/diagram.png\e\\e[2m[image: a diagram]\e[0m\e]8;;\e\

above

\e[2m────────────────────────────────────────\e[0m

below

\e[2m<details>\e[0m
\e[2m<summary>More</summary>\e[0m
\e[2m</details>\e[0m
