crates/efr-render/src/elements/snapshots/efr_render__elements__tests__headings_w40.snap
---
source: crates/efr-render/src/elements/tests.rs
expression: "readable(&render(markdown, &options))"
---
\e[1;35mHeading one\e[0m

\e[1;34mHeading two\e[0m

\e[1;36mHeading three\e[0m

\e[1;35mSetext heading\e[0m
