crates/efr-render/src/elements/snapshots/efr_render__elements__tests__headings_w80.snap
---
source: crates/efr-render/src/elements/tests.rs
expression: "readable(&render(markdown, &options))"
---
\e[1;4;33mHeading one\e[0m

\e[1;33mHeading two\e[0m

\e[1mHeading three\e[0m

\e[1;4;33mSetext heading\e[0m
