crates/efr-render/src/elements/snapshots/efr_render__elements__tests__links_w40.snap
---
source: crates/efr-render/src/elements/tests.rs
expression: "readable(&render(markdown, &options))"
---
See \e]8;;https://example.com/docs\e\\e[4;34mthe docs\e]8;;\e\\e[0m, \e]8;;https://example.com\e\\e[4;34mhttps://example.com\e]8;;\e\\e[0m, \e]8;;https://example.com/bare\e\\e[4;34mhttps://example.com/bare\e]8;;\e\\e[0m, \e]8;;file:///etc/hosts\e\\e[4;34mhosts\e]8;;\e\\e[0m, \e]8;;file:///var/log/syslog\e\\e[36m/var/log/syslog\e]8;;\e\\e[0m and \e[4;34ma relative link\e[0m\e[2m (src/lib.rs)\e[0m.
